SERVER-68241 index_tag invalid comparator