src/mongo/db/query/index_tag.cpp
@@ -60,18 +60,23 @@ int tagComparison(const MatchExpression* lhs, const MatchExpression* rhs) {
         return lhsValue < rhsValue ? -1 : 1;
     }
 
-    // Next, order so that if there's a GEO_NEAR it's first.
-    if (MatchExpression::GEO_NEAR == lhs->matchType()) {
-        return -1;
-    } else if (MatchExpression::GEO_NEAR == rhs->matchType()) {
-        return 1;
-    }
+    // Next, order geo and text predicates which MUST use an index before all others. We're not sure
+    // if this is strictly necessary for correctness, but putting these all together and first may
+    // help determine earlier if there is an index that must be used.
+    if (lhs->matchType() != rhs->matchType()) {
+        // Next, order so that if there's a GEO_NEAR it's first.
+        if (MatchExpression::GEO_NEAR == lhs->matchType()) {
+            return -1;
+        } else if (MatchExpression::GEO_NEAR == rhs->matchType()) {
+            return 1;
+        }
 
-    // Ditto text.
-    if (MatchExpression::TEXT == lhs->matchType()) {
-        return -1;
-    } else if (MatchExpression::TEXT == rhs->matchType()) {
-        return 1;
+        // Ditto text.
+        if (MatchExpression::TEXT == lhs->matchType()) {
+            return -1;
+        } else if (MatchExpression::TEXT == rhs->matchType()) {
+            return 1;
+        }
     }
 
     // Next, order so that the first field of a compound index appears first.
